--- a/ProjetoPET/Views/Shared/_LoginPartial.cshtml
+++ b/ProjetoPET/Views/Shared/_LoginPartial.cshtml
@@ -9,7 +9,8 @@
         <a class="nav-link" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">@UserManager.GetUserName(User)</a>
     </li>
     <li class="nav-item">
-        <button type="submit" class="btn btn-link navbar-btn nav-link">Sair</button>
+        @*<button type="submit" class="btn btn-link navbar-btn nav-link" asp-area="Identity" asp-page="/Account/Logout">Sair</button>*@
+        <a href="javascript:document.getElementById('logoutForm').submit()">Sair</a>
     </li>
 }
 else
