--- a/ProjetoPET/Views/Evento/Details.cshtml
+++ b/ProjetoPET/Views/Evento/Details.cshtml
@@ -23,10 +23,16 @@
             @Html.DisplayFor(model => model.Descricao)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.DataHora)
+            @Html.DisplayNameFor(model => model.DataHoraInicio)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.DataHora)
+            @Html.DisplayFor(model => model.DataHoraInicio)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.DataHoraFim)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.DataHoraFim)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Cidade)
