--- a/ProjetoPET/Views/Evento/Create.cshtml
+++ b/ProjetoPET/Views/Evento/Create.cshtml
@@ -4,6 +4,7 @@
     ViewData["Title"] = "Create";
 }
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
 <h2>Cadastre seu evento</h2>
 
 <hr />
@@ -25,40 +26,79 @@
             </div>
             <div class="row">
                 <div class="form-group col-4">
-                    <label asp-for="DataHora" class="control-label"></label>
-                    <input asp-for="DataHora" class="form-control" />
-                    <span asp-validation-for="DataHora" class="text-danger"></span>
+                    <label asp-for="DataHoraInicio" class="control-label"></label>
+                    <input asp-for="DataHoraInicio" class="form-control" />
+                    <span asp-validation-for="DataHoraInicio" class="text-danger"></span>
                 </div>
                 <div class="form-group col-4">
-                    <label asp-for="Cidade" class="control-label"></label>
-                    <input asp-for="Cidade" class="form-control" />
-                    <span asp-validation-for="Cidade" class="text-danger"></span>
+                    <label asp-for="DataHoraFim" class="control-label"></label>
+                    <input asp-for="DataHoraFim" class="form-control" />
+                    <span asp-validation-for="DataHoraFim" class="text-danger"></span>
                 </div>
                 <div class="form-group col-4">
-                    <label asp-for="Estado" class="control-label"></label>
-                    <input asp-for="Estado" class="form-control" />
-                    <span asp-validation-for="Estado" class="text-danger"></span>
-                </div>
-            </div>
-            <div class="row">
-                <div class="form-group col-6">
                     <label asp-for="CEP" class="control-label"></label>
                     <input asp-for="CEP" class="form-control" />
                     <span asp-validation-for="CEP" class="text-danger"></span>
                 </div>
-                <div class="form-group col-6">
+                @*<div class="form-group col-4">
+                <input type="radio" name="duracao"> O evento durará o dia inteiro<br>
+            </div>*@
+
+            </div>
+            @*<div class="row">*@
+            @*<div class="form-group col-6">
+            <label asp-for="Estado" class="control-label"></label>
+            <select asp-for="Estado">
+                <option value="estado">Selecione o Estado</option>
+                <option value="ac">Acre</option>
+                <option value="al">Alagoas</option>
+                <option value="am">Amazonas</option>
+                <option value="ap">Amapá</option>
+                <option value="ba">Bahia</option>
+                <option value="ce">Ceará</option>
+                <option value="df">Distrito Federal</option>
+                <option value="es">Espírito Santo</option>
+                <option value="go">Goiás</option>
+                <option value="ma">Maranhão</option>
+                <option value="mt">Mato Grosso</option>
+                <option value="ms">Mato Grosso do Sul</option>
+                <option value="mg">Minas Gerais</option>
+                <option value="pa">Pará</option>
+                <option value="pb">Paraíba</option>
+                <option value="pr">Paraná</option>
+                <option value="pe">Pernambuco</option>
+                <option value="pi">Piauí</option>
+                <option value="rj">Rio de Janeiro</option>
+                <option value="rn">Rio Grande do Norte</option>
+                <option value="ro">Rondônia</option>
+                <option value="rs">Rio Grande do Sul</option>
+                <option value="rr">Roraima</option>
+                <option value="sc">Santa Catarina</option>
+                <option value="se">Sergipe</option>
+                <option value="sp">São Paulo</option>
+                <option value="to">Tocantins</option>
+            </select>
+        </div>*@
+            @*<div class="form-group col-6">
+                <label asp-for="Cidade" class="control-label"></label>
+                <input asp-for="Cidade" class="form-control" />
+                <span asp-validation-for="Cidade" class="text-danger"></span>
+            </div>
+        </div>*@
+            <div class="row">
+                <div class="form-group col-5">
                     <label asp-for="Bairro" class="control-label"></label>
                     <input asp-for="Bairro" class="form-control" />
                     <span asp-validation-for="Bairro" class="text-danger"></span>
                 </div>
-            </div>
-            <div class="row">
-                <div class="form-group col-9">
+
+
+                <div class="form-group col-5">
                     <label asp-for="Rua" class="control-label"></label>
                     <input asp-for="Rua" class="form-control" />
                     <span asp-validation-for="Rua" class="text-danger"></span>
                 </div>
-                <div class="form-group col-3">
+                <div class="form-group col-2">
                     <label asp-for="Numero" class="control-label"></label>
                     <input asp-for="Numero" class="form-control" />
                     <span asp-validation-for="Numero" class="text-danger"></span>
@@ -66,17 +106,17 @@
 
             </div>
             
-            
+
             @*<div class="form-group">
-                <label asp-for="CreatedDate" class="control-label"></label>
-                <input asp-for="CreatedDate" class="form-control" />
-                <span asp-validation-for="CreatedDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="UpdatedData" class="control-label"></label>
-                <input asp-for="UpdatedData" class="form-control" />
-                <span asp-validation-for="UpdatedData" class="text-danger"></span>
-            </div>*@
+            <label asp-for="CreatedDate" class="control-label"></label>
+            <input asp-for="CreatedDate" class="form-control" />
+            <span asp-validation-for="CreatedDate" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="UpdatedData" class="control-label"></label>
+            <input asp-for="UpdatedData" class="form-control" />
+            <span asp-validation-for="UpdatedData" class="text-danger"></span>
+        </div>*@
             <div class="form-group float-right">
                 <input type="submit" value="Cadastrar" class="btn btn-primary" />
                 <a class="btn btn-info" asp-action="Index">Voltar a listagem</a>
