--- a/ProjetoPET/Views/Evento/Edit.cshtml
+++ b/ProjetoPET/Views/Evento/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Edit";
 }
 
-<h2>Edit</h2>
+<h2>Editar</h2>
 
 <h4>Eventos</h4>
 <hr />
@@ -26,54 +26,62 @@
             </div>
             <div class="row">
                 <div class="form-group col-4">
-                    <label asp-for="DataHora" class="control-label"></label>
-                    <input asp-for="DataHora" class="form-control" />
-                    <span asp-validation-for="DataHora" class="text-danger"></span>
+                    <label asp-for="DataHoraInicio" class="control-label"></label>
+                    <input asp-for="DataHoraInicio" class="form-control" />
+                    <span asp-validation-for="DataHoraInicio" class="text-danger"></span>
                 </div>
                 <div class="form-group col-4">
-                    <label asp-for="Cidade" class="control-label"></label>
-                    <input asp-for="Cidade" class="form-control" />
-                    <span asp-validation-for="Cidade" class="text-danger"></span>
+                    <label asp-for="DataHoraFim" class="control-label"></label>
+                    <input asp-for="DataHoraFim" class="form-control" />
+                    <span asp-validation-for="DataHoraFim" class="text-danger"></span>
                 </div>
                 <div class="form-group col-4">
                     <label asp-for="Estado" class="control-label"></label>
                     <input asp-for="Estado" class="form-control" />
                     <span asp-validation-for="Estado" class="text-danger"></span>
                 </div>
-            </div>
+                </div>
+                
+            
             <div class="row">
                 <div class="form-group col-6">
+    <label asp-for="Cidade" class="control-label"></label>
+    <input asp-for="Cidade" class="form-control" />
+    <span asp-validation-for="Cidade" class="text-danger"></span>
+</div>
+                <div class="form-group col-3">
                     <label asp-for="CEP" class="control-label"></label>
                     <input asp-for="CEP" class="form-control" />
                     <span asp-validation-for="CEP" class="text-danger"></span>
-                </div>
-                <div class="form-group col-6">
-                    <label asp-for="Bairro" class="control-label"></label>
-                    <input asp-for="Bairro" class="form-control" />
-                    <span asp-validation-for="Bairro" class="text-danger"></span>
-                </div>
-            </div>
-            <div class="row">
-                <div class="form-group col-9">
-                    <label asp-for="Rua" class="control-label"></label>
-                    <input asp-for="Rua" class="form-control" />
-                    <span asp-validation-for="Rua" class="text-danger"></span>
                 </div>
                 <div class="form-group col-3">
                     <label asp-for="Numero" class="control-label"></label>
                     <input asp-for="Numero" class="form-control" />
                     <span asp-validation-for="Numero" class="text-danger"></span>
                 </div>
+            </div>
+            <div class="row">
+                <div class="form-group col-6">
+    <label asp-for="Bairro" class="control-label"></label>
+    <input asp-for="Bairro" class="form-control" />
+    <span asp-validation-for="Bairro" class="text-danger"></span>
+</div>
+                <div class="form-group col-6">
+                    <label asp-for="Rua" class="control-label"></label>
+                    <input asp-for="Rua" class="form-control" />
+                    <span asp-validation-for="Rua" class="text-danger"></span>
+                </div>
+                
                 </div>
                 <div class="form-group">
-                    <input type="submit" value="Save" class="btn btn-default" />
+                    <input type="submit" value="Salvar" class="btn btn-default" />
                 </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a class="btn btn-info" asp-action="Index">Voltar a listagem</a>
 </div>
 
 @section Scripts {
