--- a/ProjetoPET/Views/Lojas/Details.cshtml
+++ b/ProjetoPET/Views/Lojas/Details.cshtml
@@ -107,5 +107,5 @@
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a class="btn btn-info" asp-action="Index">Voltar a listagem</a>
 </div>
