--- a/ProjetoPET/wwwroot/css/style.css
+++ b/ProjetoPET/wwwroot/css/style.css
@@ -1894,3 +1894,17 @@ figure figcaption {
     z-index: 4;
     -webkit-box-shadow: 0 4px 40px -4px rgba(0, 0, 0, 0.4);
     box-shadow: 0 4px 40px -4px rgba(0, 0, 0, 0.4); }
+.circular--landscape {
+    display: inline-block;
+    position: relative;
+    width: 170px;
+    height: 170px;
+    overflow: hidden;
+    border-radius: 50%;
+}
+
+    .circular--landscape img {
+        width: auto;
+        height: 100%;
+        margin-left: -50px;
+    }
