--- a/ProjetoPET/Views/Home/Index.cshtml
+++ b/ProjetoPET/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
                 <div class="intro-text">
                     <h1>Nós amamos os animais</h1>
                     <p class="mb-4">Aqui pode ser o caminho mais curto para encontrar seu parceiro ideal.</p>
-                    <p><a class="btn btn-primary" asp-area="" asp-controller="Evento" asp-action="Index">Fazer um tour</a></p>
+                    <p><a class="btn btn-primary" asp-area="" asp-controller="Evento" asp-action="Index">Encontre seu Pet</a></p>
                 </div>
             </div>
             <div class="col-md-5 align-self-center text-center text-md-right">
@@ -82,7 +82,7 @@
         </div>
     </div>
 </section>
-<section class="site-section" id="faq-section">
+@*<section class="site-section" id="faq-section">
     <div class="container" id="accordion">
         <div class="row justify-content-center" data-aos="fade-up">
             <div class="col-lg-6 text-center heading-section mb-5">
@@ -140,14 +140,14 @@
 
         </div>
     </div>
-</section>
+</section>*@
 <section class="site-section bg-light block-13" id="testimonials-section" data-aos="fade">
     <div class="container">
 
         <div class="row justify-content-center" data-aos="fade-up">
             <div class="col-lg-6 text-center heading-section mb-5">
 
-                <h2 class="text-black mb-2">Clientes felizes</h2>
+                <h2 class="text-black mb-2">Nossa equipe</h2>
             </div>
         </div>
         <div data-aos="fade-up" data-aos-delay="200">
@@ -156,24 +156,24 @@
                     <div class="block-testimony-1 text-center">
 
                         <blockquote class="mb-4">
-                            <p>&ldquo;Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem porro aliquam quisquam perferendis illum ad corporis tempore voluptatum, obcaecati, a unde? Aliquam suscipit dicta, error velit quaerat eligendi quam ipsa..&rdquo;</p>
+                            <p><u><h1 style="margin-bottom:3rem;">Analista</h1></u>&ldquo;Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem porro aliquam quisquam perferendis illum ad corporis tempore voluptatum, obcaecati, a unde? Aliquam suscipit dicta, error velit quaerat eligendi quam ipsa..&rdquo;</p>
                         </blockquote>
                         <figure>
                             <img src="images/person_1.jpg" alt="Image" class="img-fluid rounded-circle mx-auto">
                         </figure>
-                        <h3 class="font-size-20 text-black">Ricky Fisher</h3>
+                        <h3 class="font-size-20 text-black">Gustavo Serejo</h3>
                     </div>
                 </div>
                 <div>
                     <div class="block-testimony-1 text-center">
 
                         <blockquote class="mb-4">
-                            <p>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat ad provident ipsa similique quidem. Fugit nam deserunt ipsam? Excepturi, possimus.&rdquo;</p>
+                            <p><u><h1 style="margin-bottom:3rem;">Desenvolvedor</h1></u>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat ad provident ipsa similique quidem. Fugit nam deserunt ipsam? Excepturi, possimus.&rdquo;</p>
                         </blockquote>
                         <figure>
                             <img src="images/person_2.jpg" alt="Image" class="img-fluid rounded-circle mx-auto">
                         </figure>
-                        <h3 class="font-size-20 mb-4 text-black">Ken Davis</h3>
+                        <h3 class="font-size-20 mb-4 text-black">Miller Vieira</h3>
 
                     </div>
                 </div>
@@ -181,12 +181,12 @@
                     <div class="block-testimony-1 text-center">
 
                         <blockquote class="mb-4">
-                            <p>&ldquo;Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores numquam, animi est ratione aut explicabo fuga illum a nesciunt tempora! Incidunt laborum blanditiis quidem voluptatibus enim placeat!&rdquo;</p>
+                            <p><u><h1 style="margin-bottom:3rem;">Desenvolvedor</h1></u>&ldquo;Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores numquam, animi est ratione aut explicabo fuga illum a nesciunt tempora! Incidunt laborum blanditiis quidem voluptatibus enim placeat!&rdquo;</p>
                         </blockquote>
                         <figure>
                             <img src="images/person_1.jpg" alt="Image" class="img-fluid rounded-circle mx-auto">
                         </figure>
-                        <h3 class="font-size-20 text-black">Mellisa Griffin</h3>
+                        <h3 class="font-size-20 text-black">Gabriel Salomão</h3>
 
                     </div>
                 </div>
@@ -194,12 +194,130 @@
                     <div class="block-testimony-1 text-center">
 
                         <blockquote class="mb-4">
-                            <p>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. A nemo distinctio ratione numquam. Magni quae a adipisci hic laborum voluptate optio ab tenetur. Officiis mollitia nam itaque laborum?.&rdquo;</p>
+                            <p><u><h1 style="margin-bottom:3rem;">Desenvolvedor</h1></u>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. A nemo distinctio ratione numquam. Magni quae a adipisci hic laborum voluptate optio ab tenetur. Officiis mollitia nam itaque laborum?.&rdquo;</p>
                         </blockquote>
                         <figure>
                             <img src="images/person_2.jpg" alt="Image" class="img-fluid rounded-circle mx-auto">
                         </figure>
-                        <h3 class="font-size-20 mb-4 text-black">Robert Steward</h3>
+                        <h3 class="font-size-20 mb-4 text-black">Vitor Martins</h3>
+
+                    </div>
+
+                </div>
+                <div>
+                    <div class="block-testimony-1 text-center">
+
+                        <blockquote class="mb-4">
+                            <p><u><h1 style="margin-bottom:3rem;">Desenvolvedor</h1></u>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. A nemo distinctio ratione numquam. Magni quae a adipisci hic laborum voluptate optio ab tenetur. Officiis mollitia nam itaque laborum?.&rdquo;</p>
+                        </blockquote>
+                        <figure>
+                            <img src="images/person_2.jpg" alt="Image" class="img-fluid rounded-circle mx-auto">
+                        </figure>
+                        <h3 class="font-size-20 mb-4 text-black">Fillipe Kenzo</h3>
+
+                    </div>
+                </div>
+                <div>
+                    <div class="block-testimony-1 text-center">
+
+                        <blockquote class="mb-4">
+                            <p><u><h1 style="margin-bottom:3rem;">Desenvolvedor</h1></u>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. A nemo distinctio ratione numquam. Magni quae a adipisci hic laborum voluptate optio ab tenetur. Officiis mollitia nam itaque laborum?.&rdquo;</p>
+                        </blockquote>
+                        <figure>
+                            <img src="images/person_2.jpg" alt="Image" class="img-fluid rounded-circle mx-auto">
+                        </figure>
+                        <h3 class="font-size-20 mb-4 text-black">Emerson Diniz</h3>
+
+                    </div>
+                </div>
+                <div>
+                    <div class="block-testimony-1 text-center">
+
+                        <blockquote class="mb-4">
+                            <p><u><h1 style="margin-bottom:3rem;">Desenvolvedor</h1></u>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. A nemo distinctio ratione numquam. Magni quae a adipisci hic laborum voluptate optio ab tenetur. Officiis mollitia nam itaque laborum?.&rdquo;</p>
+                        </blockquote>
+                        <figure>
+                            <img src="images/person_2.jpg" alt="Image" class="img-fluid rounded-circle mx-auto">
+                        </figure>
+                        <h3 class="font-size-20 mb-4 text-black">Wendel Lemes</h3>
+
+                    </div>
+                </div>
+                <div>
+                    <div class="block-testimony-1 text-center">
+
+                        <blockquote class="mb-4">
+                            <p><u><h1 style="margin-bottom:3rem;">Desenvolvedor</h1></u>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. A nemo distinctio ratione numquam. Magni quae a adipisci hic laborum voluptate optio ab tenetur. Officiis mollitia nam itaque laborum?.&rdquo;</p>
+                        </blockquote>
+                        <figure>
+                            <img src="images/person_2.jpg" alt="Image" class="img-fluid rounded-circle mx-auto">
+                        </figure>
+                        <h3 class="font-size-20 mb-4 text-black">Nicolly Yonamine</h3>
+
+                    </div>
+                </div>
+                <div>
+                    <div class="block-testimony-1 text-center">
+
+                        <blockquote class="mb-4">
+                            <p><u><h1 style="margin-bottom:3rem;">Desenvolvedor</h1></u>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. A nemo distinctio ratione numquam. Magni quae a adipisci hic laborum voluptate optio ab tenetur. Officiis mollitia nam itaque laborum?.&rdquo;</p>
+                        </blockquote>
+                        <figure>
+                            <img src="images/person_2.jpg" alt="Image" class="img-fluid rounded-circle mx-auto">
+                        </figure>
+                        <h3 class="font-size-20 mb-4 text-black">Fernanda Souza</h3>
+
+                    </div>
+                </div>
+                <div>
+                    <div class="block-testimony-1 text-center">
+
+                        <blockquote class="mb-4">
+                            <p><u><h1 style="margin-bottom:3rem;">Desenvolvedor</h1></u>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. A nemo distinctio ratione numquam. Magni quae a adipisci hic laborum voluptate optio ab tenetur. Officiis mollitia nam itaque laborum?.&rdquo;</p>
+                        </blockquote>
+                        <figure>
+                            <img src="images/person_2.jpg" alt="Image" class="img-fluid rounded-circle mx-auto">
+                        </figure>
+                        <h3 class="font-size-20 mb-4 text-black">Thayna Silva</h3>
+
+                    </div>
+                </div>
+                <div>
+                    <div class="block-testimony-1 text-center">
+
+                        <blockquote class="mb-4">
+                            <p><u><h1 style="margin-bottom:3rem;">Desenvolvedor</h1></u>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. A nemo distinctio ratione numquam. Magni quae a adipisci hic laborum voluptate optio ab tenetur. Officiis mollitia nam itaque laborum?.&rdquo;</p>
+                        </blockquote>
+                        <figure>
+                            <img src="images/person_2.jpg" alt="Image" class="img-fluid rounded-circle mx-auto">
+                        </figure>
+                        <h3 class="font-size-20 mb-4 text-black">Ana Paula</h3>
+
+                    </div>
+                </div>
+                <div>
+                    <div class="block-testimony-1 text-center">
+
+                        <blockquote class="mb-4">
+                            <p><u><h1 style="margin-bottom:3rem;">Desenvolvedor</h1></u>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. A nemo distinctio ratione numquam. Magni quae a adipisci hic laborum voluptate optio ab tenetur. Officiis mollitia nam itaque laborum?.&rdquo;</p>
+                        </blockquote>
+                        <figure>
+                            <img src="images/person_2.jpg" alt="Image" class="img-fluid rounded-circle mx-auto">
+                        </figure>
+                        <h3 class="font-size-20 mb-4 text-black">Ana Chaves</h3>
+
+                    </div>
+                </div>
+                <div>
+                    <div class="block-testimony-1 text-center">
+
+                        <blockquote class="mb-4">
+                            <p><u><h1 style="margin-bottom:3rem;">Desenvolvedor</h1></u>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. A nemo distinctio ratione numquam. Magni quae a adipisci hic laborum voluptate optio ab tenetur. Officiis mollitia nam itaque laborum?.&rdquo;</p>
+                        </blockquote>
+                        <figure>
+                            <img src="images/person_2.jpg" alt="Image" class="img-fluid rounded-circle mx-auto">
+                        </figure>
+                        <h3 class="font-size-20 mb-4 text-black">Amanda Rodrigues</h3>
 
                     </div>
                 </div>
