--- a/ProjetoPET/Views/Shared/_LoginPartial.cshtml
+++ b/ProjetoPET/Views/Shared/_LoginPartial.cshtml
@@ -9,7 +9,10 @@
         <a class="nav-link" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">@UserManager.GetUserName(User)</a>
     </li>
     <li class="nav-item">
-        <button type="submit" class="btn btn-link navbar-btn nav-link">Sair</button>
+        <form method="post" asp-area="Identity" asp-page="/Account/Logout">
+            <input type="submit" class="btn btn-link navbar-btn nav-link" value="Sair" />
+        </form>
+        @*<button type="submit" class="btn btn-link navbar-btn nav-link">Sair</button>*@
     </li>
 }
 else
